2002-05-11  Daniel Morgan <danmorg@sc.rr.com>

	* AllTests.cs: needed a using for System.Data and System.Data.SqlClient,
	changed SqlTypes.AllTests.Suite to System.Data.SqlTypes.AllTests.Suite
	
	* System.Data/DataColumnTest.cs: changed typeof to DataColumnTest 

2002-05-10  Rodrigo Moya <rodrigo@ximian.com>

        * TestDataColumn.cs: removed.

	* System.Data_test.build: removed reference to TestDataColumn.

	* TheTests.cs: added RunDataColumnTest class.
	(RunAllTests.AddAllTests): added test for RunDataColumnTest.

        * System.Data/AllTests.cs: test suite for System.Data.

        * System.Data/DataColumnTest.cs: NUnit test for DataColumn.

2002-05-09  Daniel Morgan <danmorg@sc.rr.com>

	* System.Data_test.build: exclude file TestDataColumn.cs
	test.build files have two places where a file needs to
	be excluded

2002-05-06  Daniel Morgan <danmorg@sc.rr.com>

	* System.Data.SqlTypes.SqlInt32Test.cs: missing
	declaration for SqlInt32 z which was a test build blocker
	
	* PostgresTest.cs: got rid of warning about missing e
	
	* Test/PostgresTest.cs: exclude PostgresTest.cs 
	from test build

2002-05-05  Tim Coleman <tim@timcoleman.com>
	* TheTests.cs:
	* System.Data.SqlTypes/SqlInt32Test.cs:
		More test cases for System.Data.SqlTypes.SqlInt32

2002-05-03  Tim Coleman <tim@timcoleman.com>
	* Added ChangeLog to test dir
	* Added NUnit framework necessary for make test
	* Added subdirectory for System.Data.SqlTypes
	* New files:
		ChangeLog
		AllTests.cs
		TheTests.cs
		System.Data_test.build
		System.Data.SqlTypes
		System.Data.SqlTypes/AllTests.cs
		System.Data.SqlTypes/SqlInt32Test.cs

